# CalibrACT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: kaggle_brain_mri.yaml
docs/: reproducibility.md
results/: binary_accuracy.csv  final_metrics.csv
scripts/: make_figures.py  run_benchmark.py
src/calibract/: __init__.py  experiment_logging.py
src/calibract/data/: __init__.py  loaders.py  summary.py
src/calibract/models/: __init__.py  activation_configs.py  activations.py  conv_adapter.py  lora_layers.py  resnet.py
src/calibract/training/: loops.py  runner.py
tests/: __init__.py  test_activation_and_metrics.py  test_data_loader.py  test_model_smoke.py
